Fixed the footer and the navbar to 100% width and aligned most of the components, tho some components have positional errors

--- a/styling/component_styling/carousels.css
+++ b/styling/component_styling/carousels.css
@@ -4,6 +4,10 @@
     margin-top: 50px;
 }
 
+.carousel-wrapper{
+    width: 100%;
+}
+
 .carousel-indicators [data-bs-target] {
     background-color: black;
 }
